--- a/styles/home.scss
+++ b/styles/home.scss
@@ -11,7 +11,7 @@ body {
     }
 
     .chatbar {
-      background: teal;
+      background: LightSeaGreen;
       border-top: 1px solid black;
       bottom: 0;
       display: flex;
@@ -66,7 +66,7 @@ body {
     }
 
     .navbar {
-      background: teal;
+      background: LightSeaGreen;
       border-bottom: 1px solid black;
       height: 60px;
       left: 0;
