add users online counter

--- a/styles/home.scss
+++ b/styles/home.scss
@@ -76,6 +76,10 @@ body {
       top: 0;
     }
 
+    .navbar p {
+      text-align: right;
+    }
+
     .navbar-brand {
       color: inherit;
       display: block;
